# sdmxedi2ml

./: .gitignore  README.md  pyproject.toml
ibs_sdmx/: __init__.py  cli.py  convert.py  dataset.py  dsd.py  mapping.py  mapping_config.yaml  parser.py  validate.py  write.py
pysdmx_ibs_conversion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_end_to_end.py  test_parser.py  test_time_conversion.py
